<resources>
    <string name="app_name">ElectricCarApp</string>
    <string name="app_title">Electric Car</string>

    <string name="tab_car_name">Carros</string>
    <string name="tab_fav_name">Favoritos</string>
    <string name="image_car_description">A electric car image</string>
    <string name="price">Preço:</string>

    <string name="first_car_price">R$ 300.000,00</string>
    <string name="batery">Bateria:</string>
    <string name="potencia">Potência</string>
    <string name="recarga">Recarga:</string>

    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>