<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tab_carros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_car_name"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        app:layout_constraintLeft_toLeftOf="@id/tv_titulo" />

    <TextView
        android:id="@+id/tv_tab_favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tab_fav_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_tab_carros"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/electric_car"
        app:layout_constraintTop_toBottomOf="@id/tv_tab_carros"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/image_car_description" />

    <TextView
        android:id="@+id/tv_preco"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/price"
        app:layout_constraintTop_toBottomOf="@id/iv_image"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_preco_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/first_car_price"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_image"
        app:layout_constraintStart_toEndOf="@id/tv_preco"/>

    <TextView
        android:id="@+id/tv_bateria"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/batery"
        app:layout_constraintTop_toBottomOf="@id/tv_preco"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_bateria_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="330KW"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_preco"
        app:layout_constraintStart_toEndOf="@id/tv_bateria"/>

    <TextView
        android:id="@+id/tv_potencia"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/potencia"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_potencia_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="350 KWH"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria"
        app:layout_constraintStart_toEndOf="@id/tv_potencia"/>

    <TextView
        android:id="@+id/tv_recarga"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/recarga"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_racarga_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="23 Minutos"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia"
        app:layout_constraintStart_toEndOf="@id/tv_recarga"/>

    <EditText
        android:id="@+id/edit_kwh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_recarga"
        android:hint="Preço Kwh"
        android:ems="10"
        android:maxLength="10"
        android:autofillHints=""
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/km_percorrido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_kwh"
        android:hint="Km Percorrido"
        android:ems="10"
        android:maxLength="10"
        android:autofillHints=""
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/calc_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/km_percorrido"
        android:layout_marginTop="4dp"
        android:text="Calcular"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/calc_btn"
        app:layout_constraintTop_toBottomOf="@id/calc_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>